--- a/kiarah.littlexavier/bower.json
+++ b/kiarah.littlexavier/bower.json
@@ -10,6 +10,8 @@
     "jquery": "~2.1.3",
     "modernizr": "~2.8.3",
     "bootstrap": "~3.3.4",
-    "respond-minmax": "~1.4.2"
+    "respond-minmax": "~1.4.2",
+    "angular": "~1.3.15",
+    "angular-loading-bar": "~0.7.1"
   }
 }
