- Added blog entry service and controller.

--- a/Kiarah.LittleXavier.CompositionRoot/packages.config
+++ b/Kiarah.LittleXavier.CompositionRoot/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
+  <package id="AutoClutch.AutoRepo" version="1.0.4" targetFramework="net45" />
+  <package id="AutoClutch.AutoService" version="1.0.4" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
   <package id="structuremap" version="3.1.4.143" targetFramework="net45" />
   <package id="structuremap.web" version="3.1.0.133" targetFramework="net45" />
+  <package id="valueinjecter" version="2.3.3" targetFramework="net45" />
 </packages>
