--- a/Kiarah.LittleXavier.Core/Kiarah.LittleXavier.Core.csproj
+++ b/Kiarah.LittleXavier.Core/Kiarah.LittleXavier.Core.csproj
@@ -32,17 +32,28 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
+    <Reference Include="Auto.Repo">
+      <HintPath>..\packages\AutoClutch.AutoRepo.1.0.4\lib\net45\Auto.Repo.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    <Reference Include="Auto.Service">
+      <HintPath>..\packages\AutoClutch.AutoService.1.0.4\lib\net45\Auto.Service.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.EntityFramework">
       <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="Omu.ValueInjecter">
+      <HintPath>..\packages\valueinjecter.2.3.3\lib\net35\Omu.ValueInjecter.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -55,10 +66,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IAuthRepository.cs" />
+    <Compile Include="Models\blogEntry.cs" />
+    <Compile Include="Models\category.cs" />
+    <Compile Include="Models\pageEntry.cs" />
+    <Compile Include="Models\pagePartEntry.cs" />
+    <Compile Include="Models\statistic.cs" />
     <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Objects\SearchCriteria.cs" />
+    <Compile Include="Objects\SearchParam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuthService.cs" />
     <Compile Include="Interfaces\IAuthService.cs" />
+    <Compile Include="Services\BlogEntryService.cs" />
+    <Compile Include="Interfaces\IBlogEntryService.cs" />
+    <Compile Include="Models\ViewModels\BlogEntryViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
