--- a/Kiarah.LittleXavier.Data/App.config
+++ b/Kiarah.LittleXavier.Data/App.config
@@ -10,4 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="littleXavierDbContext" connectionString="data source=.\sqlexpress;initial catalog=KiarahLittleXavierDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
