--- a/kiarah.littlexavier/Web.config
+++ b/kiarah.littlexavier/Web.config
@@ -5,12 +5,13 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings></appSettings>
   <connectionStrings>
     <add name="AuthContext" connectionString="Data Source=.\sqlexpress;Initial Catalog=KiarahLittleXavierDb;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="littleXavierDbContext" connectionString="data source=.\sqlexpress;initial catalog=KiarahLittleXavierDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
