--- a/kiarah.littlexavier/bower.json
+++ b/kiarah.littlexavier/bower.json
@@ -12,6 +12,9 @@
     "bootstrap": "~3.3.4",
     "respond-minmax": "~1.4.2",
     "angular": "~1.3.15",
-    "angular-loading-bar": "~0.7.1"
+    "angular-loading-bar": "~0.7.1",
+    "angular-resource": "1.3.15",
+    "angular-route": "1.3.15",
+    "angular-local-storage": "~0.1.5"
   }
 }
