--- a/Kiarah.LittleXavier.Core/Kiarah.LittleXavier.Core.csproj
+++ b/Kiarah.LittleXavier.Core/Kiarah.LittleXavier.Core.csproj
@@ -65,21 +65,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IStatisticService.cs" />
+    <Compile Include="Interfaces\IPagePartEntryService.cs" />
+    <Compile Include="Interfaces\IPageEntryService.cs" />
+    <Compile Include="Models\ViewModels\StatisticViewModel.cs" />
+    <Compile Include="Models\ViewModels\CategoryViewModel.cs" />
     <Compile Include="Interfaces\IAuthRepository.cs" />
+    <Compile Include="Interfaces\ICategoryService.cs" />
     <Compile Include="Models\blogEntry.cs" />
     <Compile Include="Models\category.cs" />
     <Compile Include="Models\pageEntry.cs" />
     <Compile Include="Models\pagePartEntry.cs" />
     <Compile Include="Models\statistic.cs" />
     <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Models\ViewModels\PagePartEntryViewModel.cs" />
     <Compile Include="Objects\SearchCriteria.cs" />
     <Compile Include="Objects\SearchParam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuthService.cs" />
     <Compile Include="Interfaces\IAuthService.cs" />
+    <Compile Include="Services\StatisticService.cs" />
+    <Compile Include="Services\PagePartEntryService.cs" />
+    <Compile Include="Services\PageEntryService.cs" />
+    <Compile Include="Services\CategoryService.cs" />
     <Compile Include="Services\BlogEntryService.cs" />
     <Compile Include="Interfaces\IBlogEntryService.cs" />
     <Compile Include="Models\ViewModels\BlogEntryViewModel.cs" />
+    <Compile Include="Models\ViewModels\PageEntryViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
