--- a/Kiarah.LittleXavier.Data/Kiarah.LittleXavier.Data.csproj
+++ b/Kiarah.LittleXavier.Data/Kiarah.LittleXavier.Data.csproj
@@ -58,6 +58,15 @@
   <ItemGroup>
     <Compile Include="AuthContext.cs" />
     <Compile Include="littleXavierDbContext.cs" />
+    <Compile Include="Migrations\201504112151148_InitialMigration.cs" />
+    <Compile Include="Migrations\201504112151148_InitialMigration.Designer.cs">
+      <DependentUpon>201504112151148_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201504112151533_AddDateToStatistic.cs" />
+    <Compile Include="Migrations\201504112151533_AddDateToStatistic.Designer.cs">
+      <DependentUpon>201504112151533_AddDateToStatistic.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +78,14 @@
       <Project>{5caef9e3-821a-4277-95ed-9cb2de7e1312}</Project>
       <Name>Kiarah.LittleXavier.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201504112151148_InitialMigration.resx">
+      <DependentUpon>201504112151148_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201504112151533_AddDateToStatistic.resx">
+      <DependentUpon>201504112151533_AddDateToStatistic.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
