--- a/Kiarah.LittleXavier.Data/App.config
+++ b/Kiarah.LittleXavier.Data/App.config
@@ -11,6 +11,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="littleXavierDbContext" connectionString="data source=.\sqlexpress;initial catalog=KiarahLittleXavierDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="littleXavierDbContext" connectionString="data source=.\sqlexpress;initial catalog=KiarahLittleXavierDb;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
