--- a/kiarah.littlexavier/Kiarah.LittleXavier.csproj
+++ b/kiarah.littlexavier/Kiarah.LittleXavier.csproj
@@ -133,10 +133,26 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
+    <Content Include="app\authHome\authHomeController.js" />
+    <Content Include="app\blogEntry\addOrUpdateBlogEntryController.js" />
+    <Content Include="app\home\homeController.js" />
     <Content Include="app\index\indexController.js" />
+    <Content Include="app\login\loginController.js" />
+    <Content Include="app\services\authInterceptorService.js" />
+    <Content Include="app\services\authService.js" />
     <Content Include="app\services\dataService.js" />
+    <Content Include="app\signup\signupController.js" />
+    <Content Include="app\templates\add-or-update-blog-entry.html" />
+    <Content Include="app\templates\auth-home.html" />
+    <Content Include="app\templates\home.html" />
+    <Content Include="app\templates\login.html" />
+    <Content Include="app\templates\signup.html" />
     <Content Include="Content\dist\css\app.css" />
     <Content Include="Content\dist\css\app.min.css" />
+    <Content Include="Content\dist\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\Main.SmartBlog.Modified.css" />
     <Content Include="Content\style.css" />
     <Content Include="gulpfile.js" />
@@ -158,10 +174,11 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BlogEntryCommentsController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
     <Compile Include="Controllers\PagePartEntriesController.cs" />
-    <Compile Include="Controllers\PageEntryController.cs" />
-    <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\PageEntriesController.cs" />
+    <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\BlogEntriesController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
@@ -174,6 +191,24 @@
     <Content Include="bower.json" />
     <Content Include="Scripts\maps\bootstrap-bundle.min.js.map" />
     <Content Include="Scripts\maps\modernizer-min.js.map" />
+    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Content\dist\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\dist\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\dist\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\dist\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\dist\fonts\FontAwesome.otf" />
+    <Content Include="Content\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\fonts\FontAwesome.otf" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Properties\PublishProfiles\kiarah.littlexavier.com - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -183,7 +218,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="app\templates\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
