--- a/kiarah.littlexavier/bower.json
+++ b/kiarah.littlexavier/bower.json
@@ -15,6 +15,7 @@
     "angular-loading-bar": "~0.7.1",
     "angular-resource": "1.3.15",
     "angular-route": "1.3.15",
-    "angular-local-storage": "~0.1.5"
+    "angular-local-storage": "~0.1.5",
+    "textAngular": "~1.3.11"
   }
 }
