--- a/kiarah.littlexavier/Kiarah.LittleXavier.csproj
+++ b/kiarah.littlexavier/Kiarah.LittleXavier.csproj
@@ -134,26 +134,31 @@
   <ItemGroup>
     <Content Include="app\app.js" />
     <Content Include="app\authHome\authHomeController.js" />
+    <Content Include="app\blogEntryComments\addOrUpdateBlogEntryCommentController.js" />
+    <Content Include="app\blogEntryComments\blogEntryCommentsController.js" />
     <Content Include="app\blogEntry\addOrUpdateBlogEntryController.js" />
     <Content Include="app\home\homeController.js" />
     <Content Include="app\index\indexController.js" />
     <Content Include="app\login\loginController.js" />
+    <Content Include="app\blogEntry\blogEntriesController.js" />
     <Content Include="app\services\authInterceptorService.js" />
     <Content Include="app\services\authService.js" />
     <Content Include="app\services\dataService.js" />
     <Content Include="app\signup\signupController.js" />
+    <Content Include="app\templates\add-or-update-blog-entry-comment.html" />
     <Content Include="app\templates\add-or-update-blog-entry.html" />
     <Content Include="app\templates\auth-home.html" />
+    <Content Include="app\templates\blog-entry-comments.html" />
     <Content Include="app\templates\home.html" />
     <Content Include="app\templates\login.html" />
+    <Content Include="app\templates\blog-entries.html" />
     <Content Include="app\templates\signup.html" />
     <Content Include="Content\dist\css\app.css" />
     <Content Include="Content\dist\css\app.min.css" />
-    <Content Include="Content\dist\fonts\fontawesome-webfont.svg" />
-    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\Main.SmartBlog.Modified.css" />
+    <Content Include="Content\site.css" />
     <Content Include="Content\style.css" />
     <Content Include="gulpfile.js" />
     <Content Include="images\2014-11-09.jpg" />
@@ -191,15 +196,6 @@
     <Content Include="bower.json" />
     <Content Include="Scripts\maps\bootstrap-bundle.min.js.map" />
     <Content Include="Scripts\maps\modernizer-min.js.map" />
-    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="Content\dist\fonts\fontawesome-webfont.eot" />
-    <Content Include="Content\dist\fonts\fontawesome-webfont.ttf" />
-    <Content Include="Content\dist\fonts\fontawesome-webfont.woff" />
-    <Content Include="Content\dist\fonts\fontawesome-webfont.woff2" />
-    <Content Include="Content\dist\fonts\FontAwesome.otf" />
     <Content Include="Content\fonts\fontawesome-webfont.eot" />
     <Content Include="Content\fonts\fontawesome-webfont.ttf" />
     <Content Include="Content\fonts\fontawesome-webfont.woff" />
@@ -219,6 +215,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\dist\fonts\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Kiarah.LittleXavier.CompositionRoot\Kiarah.LittleXavier.CompositionRoot.csproj">
