--- a/Kiarah.LittleXavier.Core/Kiarah.LittleXavier.Core.csproj
+++ b/Kiarah.LittleXavier.Core/Kiarah.LittleXavier.Core.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\littleXavier\myCastle.cs" />
     <Compile Include="Models\ViewModels\AgeStatisticViewModel.cs" />
     <Compile Include="Models\ViewModels\BlogEntryCommentViewModel.cs" />
     <Compile Include="Interfaces\IBlogEntryCommentService.cs" />
@@ -89,6 +90,9 @@
     <Compile Include="Services\AuthService.cs" />
     <Compile Include="Interfaces\IAuthService.cs" />
     <Compile Include="Services\BlogEntryCommentService.cs" />
+    <Compile Include="Interfaces\IMyCastleService.cs" />
+    <Compile Include="Services\MyCastleService.cs" />
+    <Compile Include="Models\ViewModels\MyCastleViewModel.cs" />
     <Compile Include="Services\StatisticService.cs" />
     <Compile Include="Services\PagePartEntryService.cs" />
     <Compile Include="Services\PageEntryService.cs" />
