--- a/kiarah.littlexavier/Kiarah.LittleXavier.csproj
+++ b/kiarah.littlexavier/Kiarah.LittleXavier.csproj
@@ -145,14 +145,15 @@
     <Content Include="app\myCastle\myCastleController.js" />
     <Content Include="app\myFamily\addOrUpdateBlogEntryController.js" />
     <Content Include="app\myFamily\blogEntriesController.js" />
-    <Content Include="app\myJourney\addOrUpdateBlogEntryController.js" />
-    <Content Include="app\myJourney\blogEntriesController.js" />
+    <Content Include="app\myJourney\addOrUpdateMyJourneyController.js" />
+    <Content Include="app\myJourney\myJourneyController.js" />
     <Content Include="app\services\authInterceptorService.js" />
     <Content Include="app\services\authService.js" />
     <Content Include="app\services\dataService.js" />
     <Content Include="app\signup\signupController.js" />
     <Content Include="app\statistics\addOrUpdateStatisticController.js" />
     <Content Include="app\statistics\statisticsController.js" />
+    <Content Include="app\templates\add-or-update-my-journey.html" />
     <Content Include="app\templates\add-or-update-my-castle.html" />
     <Content Include="app\templates\add-or-update-statistic.html" />
     <Content Include="app\templates\add-or-update-blog-entry-comment.html" />
@@ -193,6 +194,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\MyJourniesController.cs" />
     <Compile Include="Controllers\MyCastlesController.cs" />
     <Compile Include="Controllers\BlogEntryCommentsController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
