- Added the my families controller and view.

--- a/Kiarah.LittleXavier.Core/Kiarah.LittleXavier.Core.csproj
+++ b/Kiarah.LittleXavier.Core/Kiarah.LittleXavier.Core.csproj
@@ -65,6 +65,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IMyFamilyService.cs" />
+    <Compile Include="Models\littleXavier\myFamily.cs" />
     <Compile Include="Models\littleXavier\myJourney.cs" />
     <Compile Include="Models\littleXavier\myCastle.cs" />
     <Compile Include="Models\ViewModels\AgeStatisticViewModel.cs" />
@@ -74,6 +76,7 @@
     <Compile Include="Interfaces\IPagePartEntryService.cs" />
     <Compile Include="Interfaces\IPageEntryService.cs" />
     <Compile Include="Models\littleXavier\blogEntryComment.cs" />
+    <Compile Include="Models\ViewModels\MyFamilyViewModel.cs" />
     <Compile Include="Models\ViewModels\MyJourneyViewModel.cs" />
     <Compile Include="Models\ViewModels\StatisticViewModel.cs" />
     <Compile Include="Models\ViewModels\CategoryViewModel.cs" />
@@ -94,6 +97,7 @@
     <Compile Include="Services\BlogEntryCommentService.cs" />
     <Compile Include="Interfaces\IMyCastleService.cs" />
     <Compile Include="Interfaces\IMyJourneyService.cs" />
+    <Compile Include="Services\MyFamilyService.cs" />
     <Compile Include="Services\MyJourneyService.cs" />
     <Compile Include="Services\MyCastleService.cs" />
     <Compile Include="Models\ViewModels\MyCastleViewModel.cs" />
