--- a/Kiarah.LittleXavier.Data/Kiarah.LittleXavier.Data.csproj
+++ b/Kiarah.LittleXavier.Data/Kiarah.LittleXavier.Data.csproj
@@ -86,6 +86,10 @@
     <Compile Include="Migrations\201504181829104_AddMyJourney.Designer.cs">
       <DependentUpon>201504181829104_AddMyJourney.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201504190037431_AddMyFamily.cs" />
+    <Compile Include="Migrations\201504190037431_AddMyFamily.Designer.cs">
+      <DependentUpon>201504190037431_AddMyFamily.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -120,6 +124,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201504181829104_AddMyJourney.resx">
       <DependentUpon>201504181829104_AddMyJourney.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201504190037431_AddMyFamily.resx">
+      <DependentUpon>201504190037431_AddMyFamily.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
